dcache-vehicles: remove deprecated type conversions + refactor comparison
Motivation:
Modification:
Replace deprecated Long(String) with static factory method valueOf(String).
Refactored manual int and long comparisons: use standard library versions.

Result:
Less deprecated code, improved readability.

Target: master
Requires-notes: no
Requires-book: no
Patch: https://rb.dcache.org/r/12983
Acked-by: Albert Rossi